--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,16 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
+### Custom ###
+# 환경설정 파일
+src/main/resources/application.yml
+
+# 로그, 임시파일
+*.log
+*.tmp
+
+# OS별
+.DS_Store
+Thumbs.db
