--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,3 +44,7 @@ springdoc:
     enabled: true
     path: /swagger-ui.html
   override-with-generic-response: false
+
+ai:
+  manual:
+    api-url: ${AI_MANUAL_API_URL}
