✨ Feat: 애플리케이션 타임존 및 로그 한국 시간으로 설정
feat: 애플리케이션 타임존 및 로그 한국 시간으로 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,8 @@ jwt:
   refresh-exp: ${JWT_REFRESH_EXP}
 
 logging:
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss, Asia/Seoul} %-5level %logger{36} - %msg%n"
   level:
     org.hibernate.SQL: debug
     org.springframework.data.redis: DEBUG
